crates/lang/macro/tests/ui/fail/S-01-missing-storage-struct.rs
use pro_lang as pro;

#[pro::contract]
mod missing_storage_struct {
    // We are missing the #[pro(storage)] attribute here
    pub struct MissingStorageStruct {}

    impl MissingStorageStruct {
        #[pro(constructor)]
        pub fn constructor() -> Self {}

        #[pro(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
